--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "classnames": "^2.5.1",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
